[gd_scene load_steps=5 format=3 uid="uid://c78lqmqyuyy88"]

[ext_resource type="Script" path="res://Scene/pipe_pair2.gd" id="1_kxt8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjuro"]
size = Vector2(172, 477)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kerov"]
size = Vector2(173.5, 444)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fefeb"]
size = Vector2(49, 423)

[node name="PipePair2" type="Node2D"]
script = ExtResource("1_kxt8e")

[node name="TopPipe" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -300)
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(1.99976, -95)
shape = SubResource("RectangleShape2D_fjuro")

[node name="BottomPipe" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(-2, 533)
shape = SubResource("RectangleShape2D_kerov")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(45, 0)

[node name="check_if_swara_pressed" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="check_if_swara_pressed"]
position = Vector2(140, 180)
shape = SubResource("RectangleShape2D_fefeb")

[connection signal="body_entered" from="TopPipe" to="." method="_on_top_pipe_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_bottom_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="check_if_swara_pressed" to="." method="_on_check_if_swara_pressed_body_entered"]
